Move away of deprecated Number constructors.
Change-Id: Iced50804217815d57c0c97c3b80479c622158232
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>