@@ -41,13 +41,13 @@ public class Test_table_140_1_HTTP_WHITEBOARD_CONTEXT_NAME_tieGoesToOldest exten
 		Dictionary<String, Object> properties = new Hashtable<String, Object>();
 		properties.put(HttpWhiteboardConstants.HTTP_WHITEBOARD_CONTEXT_NAME, DEFAULT);
 		properties.put(HttpWhiteboardConstants.HTTP_WHITEBOARD_CONTEXT_PATH, contextPath);
-		properties.put(Constants.SERVICE_RANKING, new Integer(1000));
+		properties.put(Constants.SERVICE_RANKING, Integer.valueOf(1000));
 		registrations.add(context.registerService(ServletContextHelper.class, new ServletContextHelper() {}, properties));
 
 		properties = new Hashtable<String, Object>();
 		properties.put(HttpWhiteboardConstants.HTTP_WHITEBOARD_CONTEXT_NAME, DEFAULT);
 		properties.put(HttpWhiteboardConstants.HTTP_WHITEBOARD_CONTEXT_PATH, "/otherContext");
-		properties.put(Constants.SERVICE_RANKING, new Integer(1000));
+		properties.put(Constants.SERVICE_RANKING, Integer.valueOf(1000));
 		registrations.add(context.registerService(ServletContextHelper.class, new ServletContextHelper() {}, properties));
 
 		AtomicReference<ServletContext> sc1 = new AtomicReference<ServletContext>();
